fix request import barcode and config to run both local and deploy

--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
             <version>8.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>me.paulschwarz</groupId>
+            <artifactId>spring-dotenv</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
         <!-- OAuth2 resource server -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -120,7 +126,7 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
-            <version>5.2.3</version>
+            <version>5.4.0</version>
         </dependency>
 
         <!-- Mail -->
